--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,19 +3,19 @@ name: Checks
 
 on: [push]
 
-jobs: 
+jobs:
   test-lint:
     name: Test and Lint
     runs-on: ubuntu-22
-    steps: 
+    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: actions/Checkout@v2
+        uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
-      - name: Lint 
+      - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
